--- a/dev/index.html
+++ b/dev/index.html
@@ -15,6 +15,7 @@
     <article id="current-forecast">
       <h1 class="city">--</h1>
       <p class="temp">--</p>
+      <img class="icon">
       <p class="description">--</p>
       <p class="min-max-temp">--</p>
     </article>
