--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="./appImages/favicon.png" type="image/x-icon">
   <title>WeatherApp</title>
   <link rel="stylesheet" href="style.css">
 </head>
