added dynamic header

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body class="">
+  <header class="header">
+    DN Weather App
+  </header>
   <div class="mainContainer">
     <div id="background"></div>
 
